--- a/src/components/Container/container.scss
+++ b/src/components/Container/container.scss
@@ -1,3 +1,4 @@
+@import "../../scss/colors";
 :root {
     color: white;
 }
@@ -34,4 +35,16 @@ $containerWidth: ($containerHeight/2);
     transform: translate(0, 5%);
     margin: auto auto;
 
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    border-radius: 50px;
+    .logo {
+        width: 70%;
+    }
 }
