--- a/src/Pages/Diagnose-tool/diagnosetool.scss
+++ b/src/Pages/Diagnose-tool/diagnosetool.scss
@@ -83,4 +83,7 @@
     -webkit-box-shadow: inset -7px 6px 56px -48px rgba(0, 0, 0, 0.59);
     -moz-box-shadow: inset -7px 6px 56px -48px rgba(0, 0, 0, 0.59);
     box-shadow: inset -7px 6px 56px -48px rgba(0, 0, 0, 0.59);
+    p {
+        margin: 0 auto;
+    }
 }
