--- a/src/components/Container/container.scss
+++ b/src/components/Container/container.scss
@@ -2,6 +2,13 @@
 
 :root {
     color: white;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
 }
 
 body {
@@ -15,6 +22,10 @@ body {
     align-items: center;
     margin: auto auto;
 }
+
+
+
+
 
 //$containerHeight: 90vh;
 //$containerWidth: ($containerHeight/2);
