--- a/src/App.scss
+++ b/src/App.scss
@@ -2,3 +2,4 @@
 @import "scss/normalize";
 @import "scss/colors";
 @import "scss/mixins";
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
