--- a/src/components/Container/container.scss
+++ b/src/components/Container/container.scss
@@ -13,7 +13,8 @@
 
 body {
     background: rgb(255, 255, 255);
-    background: radial-gradient(circle, white 0%, #fffbfb 100%)
+    background: radial-gradient(circle, white 0%, #fffbfb 100%);
+    font-family: 'Open Sans', sans-serif;
 }
 
 .root {
