--- a/src/Pages/Diagnose-tool/diagnosetool.scss
+++ b/src/Pages/Diagnose-tool/diagnosetool.scss
@@ -43,7 +43,9 @@
         -moz-box-shadow: inset -3px 0px 36px -23px rgba(0, 0, 0, 0.59);
         box-shadow: inset -3px 0px 36px -23px rgba(0, 0, 0, 0.59);
     }
-
+}
+.radioboxText {
+    margin-left: 8px;
 }
 .radioWrapper {
     height: auto;
